# collab-backend

./: .env.dev  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  heroku.yml  pyproject.toml
.github/workflows/: push.yml
collab/: celery.py  logging.py  settings.py  urls.py
collab_app/: admin.py  serializers.py  tasks.py  utils.py  views.py
collab_app/auth/: adapters.py  serializers.py
collab_app/migrations/: 0001_initial.py  0002_thread_is_resolves.py  0003_auto_20200825_0340.py  0004_auto_20200825_0358.py  0005_invite.py  0006_auto_20200827_1818.py  0007_auto_20200827_1919.py  0008_auto_20200904_2201.py  0009_auto_20200904_2358.py  0010_auto_20200905_0310.py  0011_auto_20200906_1649.py  0012_auto_20200906_1649.py  0013_auto_20200907_0216.py  0014_auto_20200907_0340.py  0015_auto_20200907_1942.py  0016_taskcolumn_project.py  0017_auto_20200908_2054.py  0018_auto_20200913_0356.py  0019_auto_20200920_0603.py  0020_task_assigned_to.py  0021_taskhtml.py  0022_taskcolumn_order.py  0023_auto_20201005_0503.py  0024_auto_20201029_2114.py  0025_auto_20201029_2336.py  0026_auto_20201110_0533.py  0027_taskdataurl.py
collab_app/mixins/: api.py  models.py
collab_app/models/: __init__.py  comment.py  invite.py  membership.py  organization.py  profile.py  project.py  task.py  thread.py  user.py
collab_app/permissions/: __init__.py  object_level.py
docker/: Dockerfile  development-entrypoint.sh  production-tasks.sh  staging-entrypoint.sh
tests/: mixins.py  settings.py  test_auth.py
(+25 files in other folders)
