[tool.poetry]
name = "collab-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.0.4"
django-debug-toolbar = "^2.2"
django-celery-email = "^3.0.0"
dynamic-rest = {git = "https://github.com/cooperjbrandon/dynamic-rest.git"}
dj-rest-auth = {extras = ["with_social"], version = "^1.0.0"}
psycopg2-binary = "^2.8.4"
django-extensions = "^3.0.5"
ipython = "7.13.0"
django-cors-headers = "^3.4.0"
redis = "^3.5.3"
boto3 = "^1.14.56"
playwright = "^0.140.0"
whitenoise = "^5.2.0"
gunicorn = "^20.0.4"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest-django = "^3.9.0"
model-mommy = "^2.0.0"
responses = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
